Si agregaron Id's a las BBDD, Se creó todo lo qeu es admin y superuser, junto a todos los detalles weones que puse

--- a/Paralelo/Paralelo/templates/navbar.html
+++ b/Paralelo/Paralelo/templates/navbar.html
@@ -3,8 +3,10 @@
 <body>
     
     <ul>
-        <li><a href="/principal/">Principal</a></li>
-        <li><a href="/nosotros/">Nosotros</a></li>
+        <li><a href="{% url 'principal'%}">Principal</a></li>
+        <li><a href="{% url 'nosotros'%}">Nosotros</a></li>
+        <li><a href="{% url 'prueba'%}">Prueba</a></li>
+        <li><a href="/admin/">Admin</a></li>
 
     </ul>
 
