--- a/Paralelo/Paralelo/templates/prueba.html
+++ b/Paralelo/Paralelo/templates/prueba.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Principal</title>
+    <title>Prueba</title>
 </head>
 <body>
     {% include "navbar.html" %}
-    <p>Pagina principal</p>
+    <p>Pagina aplicación BBDD</p>
 </body>
 </html>
