--- a/Paralelo/BBDD/templates/logout.html
+++ b/Paralelo/BBDD/templates/logout.html
@@ -1,8 +1,5 @@
 {% extends 'index.html' %}
 
 {% block content %}
-
-<body>
-    <p>Pagina principal</p>
-</body>
+<h1>Has hecho Logout</h1>
 {% endblock %}
