--- a/Paralelo/BBDD/templates/nosotros.html
+++ b/Paralelo/BBDD/templates/nosotros.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-</head>
+{% extends 'index.html'%}
+
+{% block content %}
 <body>
-    {% include "navbar.html" %}
+
     <p>Pagina nosotros</p>
 </body>
-</html>
+
+{% endblock content %}
