--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -16,7 +16,8 @@
             <li><a  href="{% url 'principal'%}">Principal</a></li>
             <li><a href="{% url 'nosotros'%}">Nosotros</a></li>
             {%if request.user.is_authenticated%}
-            <li><a href="{% url 'logout'%}">Cerrar Sesión</a></li>
+            <li><a href="{% url 'cursos'%}">Cursos</a></li>
+            <li><a href="{% url 'confirmacion'%}">Cerrar Sesión</a></li>
             {%else%}
             <li><a href="{% url 'login'%}">Iniciar Sesión</a></li>
             <li><a href="{% url 'registro'%}">Registro</a></li>
