--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/cursos.css' %}">
 </head>
 <body>
   <header>
