--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -23,6 +23,7 @@
             <li><a href="{% url 'login'%}">Iniciar Sesión</a></li>
             <li><a href="{% url 'registro'%}">Registro</a></li>
             {%endif%}
+            <li><a href="{% url 'listas'%}">listas</a></li>
             <li><a href="/admin/">Admin</a></li>
           </ul>
       </nav>
