--- a/Paralelo/Paralelo/static/css/cursos.css
+++ b/Paralelo/Paralelo/static/css/cursos.css
@@ -7,7 +7,7 @@ h2{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 10px;
-    min-height: 0;
+    min-height: fit-content;
     margin-bottom: 30px;
 }
 .video{
