--- a/Paralelo/BBDD/templates/principal.html
+++ b/Paralelo/BBDD/templates/principal.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <body>
-    <p>Pagina principal</p>
+    <h1>Inicio</h1>
     {%if request.user.is_authenticated%}
     <div>
         <p>Tus datos:</p>
