--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -6,7 +6,6 @@
   <title>Document</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/cursos.css' %}">
 </head>
 <body>
   <header>
@@ -14,21 +13,25 @@
       <!--<img src="logo.png" alt="">-->
       <nav>
           <ul>
-            <li><a  href="{% url 'principal'%}">Principal</a></li>
-            <li><a href="{% url 'nosotros'%}">Nosotros</a></li>
+            <li><a  href="{% url 'principal'%}">Inicio</a></li>
             {%if request.user.is_authenticated%}
             <li><a href="{% url 'cursos'%}">Cursos</a></li>
+            <li><a href="{% url 'listas'%}">Mis Listas</a></li>
             <li><a href="{% url 'confirmacion'%}">Cerrar Sesión</a></li>
             {%else%}
             <li><a href="{% url 'login'%}">Iniciar Sesión</a></li>
-            <li><a href="{% url 'registro'%}">Registro</a></li>
+            <li><a href="{% url 'registro'%}">Regístrate</a></li>
             {%endif%}
-            <li><a href="{% url 'listas'%}">listas</a></li>
+            <li><a href="{% url 'nosotros'%}">Nosotros</a></li>
+            {%if request.user.is_staff%}
             <li><a href="/admin/">Admin</a></li>
+            {%endif%}
+            
           </ul>
       </nav>
     </div>
   </header>
+  <div id="infoPag">
   {% if messages %}
     {% for message in messages%}
       <div class="notification message.tags">
@@ -39,6 +42,10 @@
   {% block content %}
 
   {% endblock content %}
+</div>
 
+<footer>
+  <p>Hola</p>
+</footer>
 </body>
 </html>
