--- a/Paralelo/Paralelo/static/css/main.css
+++ b/Paralelo/Paralelo/static/css/main.css
@@ -2,14 +2,33 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    z-index: 1;
     
 }
+body {
+    background-color: lightgray;
+}
+
+p{
+    font-size: larger;
+}
+
+#infoPag{
+    padding-top: 64px;
+    min-height: 95vh;
+}
+
 /* navbar */
 header{
     background-color: grey;
     width: 100%;
     display: table;
     font-size: 1.1rem;
+    position: fixed;
+    box-shadow: 0 1px rgba(90, 90, 90, 0.664);
+    z-index: 2;
+    
+
 
 }
 .menu {
@@ -44,12 +63,62 @@ nav ul li:hover{
     
 }
 
-/* fin navbar */
-
-body {
-    background-color: lightgray;
+/* footer */
+footer{
+    background-color: grey;
+    min-height: 5vh;
 }
 
-p{
-    font-size: larger;
+/*Cursos y listas*/
+h2{
+    margin: 0 10px 0 10px;
+}
+
+.tema{
+    margin: 0 10px 0 10px;
+    background-color: gray;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    min-height: fit-content;
+    margin-bottom: 30px;
+}
+.video{
+    background-color: darkgrey;
+    width: 98%;
+    min-height: 350px;
+    height: 40vh;
+    margin: 1%;
+    text-align: center;
+    transition: 0.3s;
+}
+
+.video:hover{
+    background-color: lightgray;
+    font-weight: bold;
+    transform: scale(1.02);
+}
+
+#frameVideo{
+    margin: 10px;
+    aspect-ratio: 16/9;
+    width: 90%;
+}
+.titulo{
+    height: 20%;
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+.autor{
+    height: 10%;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: medium;
+}
+.extraAction {
+    height: 20%;
+}
+.nlista{
+    font-size:x-large;
 }
