se diseñó un poco los botones e integró en un asola pagina el registro e inicio de sesión

--- a/Paralelo/BBDD/templates/Cursos.html
+++ b/Paralelo/BBDD/templates/Cursos.html
@@ -25,7 +25,7 @@
                                 <option value="{{curso.id}},{{video.id}}">{{curso.nombre_curso}}</option>
                                 {%endfor%}
                             </select>
-                            <button type="submit">Añadir</button>
+                            <button class="boton" type="submit">Añadir</button>
                         </div>
                         </form>
                     </div>
