--- a/Paralelo/BBDD/templates/login.html
+++ b/Paralelo/BBDD/templates/login.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 <body>
-    <p>Registro de Usuarios</p>
+    <h1>Iniciar Sesión</h1>
     <form class="form" method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit" id="submit">Login</button>
+        <button class="boton" type="submit" id="submit">Login</button>
     </form>
+    <h3>¿No tienes una cuenta? <a class="boton" href="{% url 'registro'%}">Regístrate aquí</a></h3>
 </body>
 {% endblock %}
