--- a/Paralelo/BBDD/templates/registro.html
+++ b/Paralelo/BBDD/templates/registro.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 <body>
-    <p>Registro de Usuarios</p>
+    <h1>Registro de Usuarios</h1>
     <form class="form" method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit" id="submit">Enviar</button>
+        <button class="boton" type="submit" id="submit">Enviar</button>
     </form>
+    <h3>¿Ya tienes una cuenta? <a class="boton" href="{% url 'login'%}">Inicia sesión</a></h3>
 </body>
 {% endblock %}
