--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 </head>
 <body>
@@ -42,6 +43,19 @@
   {% block content %}
 
   {% endblock content %}
+  <!--Estudiar!-->
+  <script>
+    $(document).ready(function() {
+        $('.no_recargar').on('submit', function(event) {
+            event.preventDefault();
+            $.ajax({
+                type: "POST",
+                url: $(this).attr('action'),
+                data: $(this).serialize(),
+            });
+        });
+    });
+</script>
 </div>
 
 <footer>
