--- a/Paralelo/Paralelo/static/css/main.css
+++ b/Paralelo/Paralelo/static/css/main.css
@@ -28,6 +28,10 @@ p{
     font-weight: bold;
 }
 
+.boton:hover{
+    background-color: darkgray;
+}
+
 /* navbar */
 header{
     background-color: grey;
