Diseño login y registro bootstrap. Botones también

--- a/Paralelo/BBDD/templates/Cursos.html
+++ b/Paralelo/BBDD/templates/Cursos.html
@@ -25,7 +25,7 @@
                                     <option value="{{curso.id}},{{video.id}}">{{curso.nombre_curso}}</option>
                                     {%endfor%}
                                 </select>
-                                <button class="boton" type="submit" onclick="alert('Se ha añadido a la lista')">Añadir</button>
+                                <button class="btn btn-dark btn-sm" type="submit" onclick="alert('Se ha añadido a la lista')">Añadir</button>
                             </form>
                             </div>
                     </div>
