--- a/Paralelo/BBDD/templates/confirmacion.html
+++ b/Paralelo/BBDD/templates/confirmacion.html
@@ -3,8 +3,8 @@
 {% block content %}
 <body>
     <h1>¿Está seguro de querer cerrar su sesión?</h1>
-    <a class="boton" href="{% url 'principal'%}">Volver a inicio</a>
-    <a class="boton" href="{% url 'logout'%}">Cerrar Sesión</a>
+    <a class="btn btn-outline-dark" href="{% url 'principal'%}">Volver a inicio</a>
+    <a class="btn btn-outline-dark" href="{% url 'logout'%}">Cerrar Sesión</a>
 
 </body>
 
