--- a/Paralelo/BBDD/templates/principal.html
+++ b/Paralelo/BBDD/templates/principal.html
@@ -15,7 +15,7 @@
     </div>
     {%else%}
     <h2>Inicia sesón para acceder al contenido de la página</h2>
-    <a class="boton" href="{% url 'login'%}">Inicia sesión</a>
+    <a class="btn btn-outline-dark" href="{% url 'login'%}">Inicia sesión</a>
     {%endif%}
 </body>
 {% endblock %}
