--- a/Paralelo/Paralelo/static/css/main.css
+++ b/Paralelo/Paralelo/static/css/main.css
@@ -17,22 +17,9 @@ p{
     padding-top: 64px;
     min-height: 95vh;
 }
-.boton {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: gray;
-    color: black;
-    text-decoration: none;
-    border: 1px solid black; 
-    border-radius: 5px;
-    font-weight: bold;
-}
-
-.boton:hover{
-    background-color: darkgray;
-}
 
 /* navbar */
+
 header{
     background-color: grey;
     width: 100%;
@@ -123,6 +110,7 @@ h2{
     height: 20%;
     margin-left: 5px;
     margin-right: 5px;
+    font-size:medium;
 
 }
 .autor{
@@ -165,3 +153,63 @@ h2{
     float: right;
     margin-right: 4vw;
 }
+
+/*Forms*/
+
+.formUsers {
+    margin: 0;
+    padding: 40px;
+    font-size: 0.9rem;
+}
+
+.formUsers input {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #D3D8DC;
+  outline: 0;
+  background: #fff;
+  padding: 20px 0 4px;
+  margin: 0 0 20px;
+  color: gray;
+}
+.formUsers input:focus {
+    border-color: black;
+    color: black;
+  }
+.formUsers textarea {
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid #D3D8DC;
+    outline: 0;
+    background: #fff;
+    padding: 20px 0 4px;
+    margin: 0 0 20px;
+    color: #777B7E;
+  }
+.formUsers textarea:focus {
+    border-color: #7A9D96;
+    color: #2C3238;
+  }
+.formUsers button#submit {
+    width: 100%;
+    padding: 20px 0;
+    text-align: center;
+    background: white;
+    color: black;
+    border-radius: 4px;
+    opacity: .8;
+    border: 1px solid;
+    transition: .1s linear;
+    font-size: large;
+  }
+  
+.formUsers button#submit:hover {
+    background-color: black;
+    color: white;
+  }
+
+.formulario {
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 2vh;    
+  }
