--- a/Paralelo/BBDD/templates/crear_listas_publicas.html
+++ b/Paralelo/BBDD/templates/crear_listas_publicas.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="boton" type="submit" id="submit">Enviar</button>
+        <button class="btn btn-outline-dark" type="submit" id="submit">Enviar</button>
       </form>
 </body>
 
