--- a/Paralelo/BBDD/templates/login.html
+++ b/Paralelo/BBDD/templates/login.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 <body>
-    <h1>Iniciar Sesión</h1>
-    <form class="form" method="post">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button class="boton" type="submit" id="submit">Login</button>
-    </form>
-    <h3>¿No tienes una cuenta? <a class="boton" href="{% url 'registro'%}">Regístrate aquí</a></h3>
+    <div class="formulario">
+        <h1 class="text-center">Iniciar Sesión</h1>
+        <form class="formUsers" method="post">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button  type="submit" id="submit">Login</button>
+        </form>
+        <h5 class="text-center">¿No tienes una cuenta? <a class="btn btn-dark" href="{% url 'registro'%}">Regístrate aquí</a></h5>
+    </div>
 </body>
 {% endblock %}
