--- a/Paralelo/BBDD/templates/recomendacion.html
+++ b/Paralelo/BBDD/templates/recomendacion.html
@@ -38,7 +38,7 @@
 
 
         <br><br>
-        <button class="boton" type="submit">Añadir</button>
+        <button class="btn btn-outline-dark" type="submit">Añadir</button>
     </div>
     </form>
 </body>
