--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Modernizados</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
