--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -58,7 +58,17 @@
 </div>
 
 <footer>
-  <p>Hola</p>
+  <div class="Footer">
+    <h5>Encuéntranos</h5>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3327.4185450424707!2d-70.6215968251789!3d-33.49048609956209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d006fa56ee51%3A0x81dacfbe20db68cf!2sUniversidad%20T%C3%A9cnica%20Federico%20Santa%20Mar%C3%ADa!5e0!3m2!1ses!2scl!4v1700060296238!5m2!1ses!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <p id="direccion"><a href="https://maps.app.goo.gl/GcKjmzQFhrsNszCW8" target="_blank">Av. Vicuña Mackenna 3939, 8940897 San Joaquín, Región Metropolitana</a></p>
+  </div>
+  <div class="Footer">
+    <h5>Contacto</h5>
+    <p><a href="mailto:modernizadosusm@gmail.com">Correo: modernizadosusm@gmail.com</a></p>
+    <p><a href="tel:+56 9 3956 39 29">tel:+56 9 3956 39 29</a></p>
+
+  </div>
 </footer>
 </body>
 </html>
