--- a/Paralelo/BBDD/templates/login.html
+++ b/Paralelo/BBDD/templates/login.html
@@ -9,7 +9,9 @@
             {{form.as_p}}
             <button  type="submit" id="submit">Login</button>
         </form>
+        <h5 class="text-center">¿Olvidó su contraseña? <a class="btn btn-dark" href="{% url 'password_reset'%}">Recuperar contraseña</a></h5>
         <h5 class="text-center">¿No tienes una cuenta? <a class="btn btn-dark" href="{% url 'registro'%}">Regístrate aquí</a></h5>
+
     </div>
 </body>
 {% endblock %}
